Add instructions for ZFS storage
Add instructions for installing actuated with ZFS storage for VMs.

Update the installation page to use tabs to make a clear distinction
between different installation and configuration options.

Signed-off-by: Han Verstraete (OpenFaaS Ltd) <han@openfaas.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ extra:
 
 plugins:
   - search
-  
+
 markdown_extensions:
   - attr_list
   - tables
@@ -81,6 +81,8 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.smartsymbols
   - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
